<resources>
    <string name="app_name">Organizate</string>

    <string name="google_maps_key" translatable="false">AIzaSyAncEygra-ZFKFrm551Mia_zWCITDcpGfI</string>
    <string name="app_lice" translatable="false">2016 Cesar Casanova ( CESoft )\nCreative Commons NC-SA</string>
    <string name="app_vers" translatable="false">2016 - Ver. %s</string>
    <string name="app_lice_tit">Licence</string>
    <string name="app_vers_tit">Version:</string>
    <string name="app_desc">\nApplication for the management of your personal tasks. It counts with date and geo-position alerts.\n</string>

    <string name="guardar">Save</string>
    <string name="aviso">Alert!</string>
    <string name="cerrar">Close</string>
    <string name="hablar">Priority %1$d, %2$s, %3$s</string>

    <string name="editar">Edit</string>
    <string name="eliminar">Remove</string>
    <string name="nuevo">Add</string>
    <string name="volver">Get Back</string>
    <string name="editar_aviso_tem">Edit the Warning</string>
    <string name="editar_aviso_geo">Edit the GeoWarning</string>
    <string name="aviso_tem">Date Alert:</string>
    <string name="aviso_geo">Geo Alert:</string>

    <string name="nombre">Name</string>
    <string name="descripcion">Description</string>
    <string name="nodo_padre">*Top Node*</string>
    <string name="prioridad">Priority</string>
    <string name="fec_creado">Created</string>
    <string name="fec_modificado">Modified</string>
    <string name="fec_limite">Due time</string>

    <string name="sintareas">No tasks</string>

    <string name="lunes">Mo</string>
    <string name="martes">Tu</string>
    <string name="miercoles">We</string>
    <string name="jueves">Th</string>
    <string name="viernes">Fr</string>
    <string name="sabado">Sa</string>
    <string name="domingo">Su</string>

    <string name="todo">All</string>
    <string name="nada">Nothing</string>

    <string name="activo">Active</string>
    <string name="fecha">Date:</string>
    <string name="desactivar_por_ahora">Don\'t alert me again\nfor today</string>
    <string name="leer">Read the content</string>
    <string name="actualizar_posicion">Refresh location</string>
    <string name="geofen_dwell">Inside Alert Zone</string>
    <string name="geofen_in">Entering Alert Zone</string>
    <string name="geofen_out">Exiting Alert Zone</string>
    <string name="posicion">Loc:</string>
    <string name="radio">Radius:</string>
    <string name="config">Settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_new_message_notifications">Message notifications</string>
    <string name="pref_title_new_message_notifications_type">Show pop-up dialog</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_data_sync">Data</string>
    <string name="pref_header_general">About this App…</string>
    <string name="pref_title_is_auto_arranque">Start Alerts at Boot</string>
    <string name="pref_title_send_by_email">Export to eMail</string>
    <string name="title_activity_act_config">Settings</string>

    <string name="error_carga_lista">Error while loading tasks list</string>
    <string name="cargando">Loading…</string>
    <string name="max_num_items">Maximum number of items reached</string>
    <string name="no_task_with_super_level">There is no task with superior level that this</string>
    <string name="no_task_list">There isn\'t any task in the list</string>
    <string name="error_task_not_found">Task not found</string>
    <string name="error_database">Database error</string>
    <string name="error_feature">Feature error</string>
    <string name="error_unexpected">Unexpected error</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ask_sure_delete">Are you sure you want to delete this?</string>
    <string name="title_sure_delete">Delete task</string>
    <string name="ask_exit_save">Task changed. Do you want to save it?</string>
    <string name="title_exit_save">Save task</string>
    <string name="text2speech_task">Task %s, %s. Priority %d</string>

    <string name="title_tasks">Tasks</string>
    <string name="title_task">Task</string>
    <string name="title_notif_date">Date Notice</string>
    <string name="title_notif_geo">Geo Notice</string>
    <string name="title_edit_date">Edit Field</string>
    <string name="minutes">Minutes:</string>
    <string name="edit_minutes">Edit minutes</string>
    <string name="hours">Hours:</string>
    <string name="edit_hours">Edit hours</string>
    <string name="days_month">Days Month:</string>
    <string name="edit_days_month">Edit Days Month</string>
    <string name="days_week">Days Week:</string>
    <string name="edit_days_week">Edit Days Week</string>
    <string name="months">Months:</string>
    <string name="edit_months">Edit Months</string>
    <string name="years">Years:</string>
    <string name="edit_years">Edit Years</string>

    <string name="all">All</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>


</resources>
