<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.cesoft.organizate2.ui.item.ItemActivity"
	tools:showIn="@layout/activity_edit">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtNombre_"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<AutoCompleteTextView
			android:id="@+id/txtNombre"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/nombre"
			android:inputType="text"
			android:maxLines="1"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtDescripcion_"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txtNombre_"
		>
		<AutoCompleteTextView
			android:id="@+id/txtDescripcion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/descripcion"
			android:inputType="textMultiLine"
			android:maxLines="3"/>
	</android.support.design.widget.TextInputLayout>

	<TextView
		android:id="@+id/lbPrioridad"
		android:layout_below="@+id/txtDescripcion_"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:text="@string/prioridad"
		/>
	<RatingBar
		android:id="@+id/rbPrioridad"
		android:layout_below="@+id/lbPrioridad"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_centerHorizontal="true"
		android:numStars="5"
        android:stepSize="1.0"
		/>

	<Button
		android:id="@+id/btnPadre"
		android:layout_below="@+id/rbPrioridad"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		style="@style/btnStyle"
		android:text="@string/nodo_padre"
		/>

	<LinearLayout
		android:layout_below="@+id/btnPadre"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp"
		>
		<ImageButton
			android:id="@+id/btnEliminar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			style="@style/btnStyle"
			android:src="@android:drawable/ic_menu_delete"
			android:contentDescription="@string/eliminar"/>

		<ImageButton
			android:id="@+id/btnHablar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			style="@style/btnStyle"
			android:src="@android:drawable/ic_menu_help"
			android:contentDescription="@string/leer"/>

		<ImageButton
			android:id="@+id/btnAviso"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			style="@style/btnStyle"
			android:src="@android:drawable/ic_menu_today"
			android:contentDescription="@string/aviso"/>

		<ImageButton
			android:id="@+id/btnAvisoGeo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			style="@style/btnStyle"
			android:src="@android:drawable/ic_menu_mapmode"
			android:contentDescription="@string/aviso"/>
	</LinearLayout>
</RelativeLayout>
